--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,204 +1,332 @@
+body {
+  font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+  font-size: 18px;
+  color: #777;
+  line-height: 34px;
+  background: url("../images/backgrd.png");
+}
+
 * {
   box-sizing: border-box;
 }
 
-body {
-  line-height: 32px;
-}
+
+/*general*/
 
 .container {
-	font: 'Georgia', Times, Times New Roman, serif;
-  background-image: url("../images/backgrd.png");
+  clear: both;
+  margin: 0 auto;
+  width: 100%;
+  max-width: 960px;
 }
 
-/*main header*/
-header {
-  background:#4aaaa5;
-  color:#ffffff;
-  border:2px solid #cccccc;
-  font-size:30px;
-  font-weight: bold;
-  padding:21px;
-  width:22%;
-  float:left;
-  margin:auto;
-  margin-top: 0px;
-  margin-left: 50px;
-  font-family:'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+h1,
+h2,
+h3,
+p {
+  margin-bottom: 20px;
+}
+
+h1,
+h2,
+h3 {
+  font-family: 'Georgia', Times, Times New Roman, serif;
+  color: #4aaaa5;
+  font-weight: 700;
+}
+
+h1 {
+  padding-bottom: 20px;
+  font-size: 30px;
+  line-height: 49px;
+  border-bottom: 3px solid #ddd;
+}
+
+h2,
+h3 {
+  font-size: 22px;
+}
+
+
+/*header*/
+
+#masthead {
+  position: fixed;
+  margin: 0 0 30px;
+  overflow: auto;
+  width: 100%;
+  color: #fff;
+  background: #fff;
+  border-bottom: 2px solid #ccc;
+}
+
+#logo {
+  width: 300px;
+  height: 90px;
+  float: left;
+  font-family: 'Georgia', Times, Times New Roman, serif;
   text-align: center;
+  line-height: 90px;
+  color: #fff;
+  font-weight: 700;
+  font-size: 30px;
+  text-decoration: none;
+  background: #4aaaa5;
 }
 
-/* connect with me icons*/
-.img1 {
-padding: 15px;
-float:left;
-width:90px;
-height:90px;
+nav {
+  float: right;
+  margin-top: 25px;
 }
 
-#profile_image{
-  padding: 10px;
-float: left; 
+nav a {
+  display: inline-block;
+  margin-left: 15px;
+  padding-left: 15px;
+  color: #999;
+  text-decoration: none;
+  line-height: 18px;
+  border-left: 1px solid #efefef;
+}
+
+nav a:first-child {
+  border-left: 0 none;
+}
+
+
+/*footer*/
+
+footer {
+  padding: 30px 0;
+  clear: both;
+  color: #fff;
+  color: #ccc;
+  font-size: 12px;
+  text-align: center;
+  background: #666;
+  border-top: 8px solid #4aaaa5;
+}
+
+
+/*sidebar*/
+
+.sidebar {
+  padding: 30px;
+  width: 100%;
+  max-width: 270px;
+  float: right;
+  margin-bottom: 20px;
+  background: #fff;
+  border: 1px solid #ddd;
+}
+
+h3,
+.sidebar h2 {
+  padding-bottom: 20px;
+  margin-bottom: 15px;
+  line-height: 22px;
+  border-bottom: 2px solid #eee;
+}
+
+.social {
+  width: 62px;
+  height: 62px;
+  margin-top: 8px;
+  margin-right: 5px;
+}
+
+.social:last-child {
+  margin-right: 0;
+}
+
+
+/*main*/
+
+#main-container {
+  padding-top: 130px;
+}
+
+.main-section {
+  padding: 30px;
+  margin: 0 0 40px 0;
+  width: 100%;
+  max-width: 650px;
+  float: left;
+  background: #fff;
+  border: 1px solid #ddd;
+}
+
+
+/*portfolio page*/
+
+.work {
+  position: relative;
+  width: 274px;
+  overflow: auto;
+  float: left;
+  margin: 20px 0 25px;
+}
+
+.work:nth-child(even) {
+  margin-right: 40px;
+}
+
+.work img {
+  width: 100%;
+  border: 0 none;
+  opacity: .8;
+}
+
+.work h3 {
+  position: absolute;
+  bottom: 20px;
+  margin-bottom: 0;
+  padding: 15px;
+  width: 100%;
+  color: #fff;
+  text-align: center;
+  line-height: 30px;
+  font-weight: 300;
+  background: #4aaaa5;
+  border-bottom: 0;
+}
+
+.auth-image {
+  width: 200px;
+  height: auto;
+  margin-top: 10px;
+  margin-right: 25px;
+  float: left;
+}
+
+
+/*contact page*/
+
+#contact-form ul {
+  margin-bottom: 20px;
+}
+
+#contact-form li {
+  margin-bottom: 10px;
+}
+
+label,
+input[type=text],
+input[type=email],
+textarea {
+  display: block;
+  width: 100%;
+}
+
+input[type=text],
+input[type=email],
+textarea {
+  height: 35px;
+  padding: 0 10px;
+  font-size: 14px;
+  border: 1px solid #ddd;
+}
+
+textarea {
+  height: 200px;
+}
+
+input[type=submit] {
+  padding: 10px 30px;
+  color: #fff;
+  font-size: 18px;
+  cursor: pointer;
+  background: #4aaaa5;
+  border: 0 none;
 }
 
 a{
-text-decoration: none;
+  text-decoration: none;
 }
 
-/*main content block*/
-.main-content{
-  clear:both;
-  overflow: auto;
-  background: #ffffff;
-  border:2px solid #dddddd;
-  color: #777777;
-  font-size:20px;
-  float:left;
-  width:650px;
-  margin: 50px;
-  padding:30px;
+
+@media screen and (max-width: 768px) {
+
+.sidebar{ 
+  max-width:96%;
+  margin-left:2%;
+  margin-right:2%;
+  float: left;
 }
 
-/*Nav Bar*/
-ul {
-    list-style-type: none;
-    overflow: hidden;
-    color: #777777;
-    font-size: 20px;
+ .main-section{ 
+  max-width: 96%; 
+  margin-left:2%;
+  margin-right: 2%;
 }
 
-li {
-    float: right;
-    text-align: center;
-    width: 280px;
-    height: 80px;
-    padding:20px;
+#masthead{
+max-width:100%;
+padding-left: 20px;
+padding-right: 20px;
 
-  }
-
-/*header 2*/
-h2{
-color: #4aaaa5;
-font-size: 30px;
-border-bottom: 2px solid #777777;
-padding: 10px;
-font-weight: bold;
-font-family:'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 }
 
-/*connect with me block*/
-.connect{
-float:left;
-width: 270 px;
-background: white;
-padding:20px;
-margin-top:50px;
-border:2px solid #dddddd;
 }
 
-.footer {
-background: #666666;
-clear:both;
-padding: 24px 15px;
-color:#efeee7;
-font size: 28px;
-text-align: center;
+@media screen and (max-width: 640px) {
+
+.sidebar{ 
+  max-width:96%;
+  margin-left:2%;
+  margin-right:2%;
+  float: left;
+}
+
+ .main-section{ 
+  max-width: 96%; 
+  margin-left:2%;
+  margin-right: 2%;
+}
+
+#masthead{
+padding:0px;
 width:100%;
-border:solid #4aaaa5;
-border-width:5px 0px 0px 0px;  
+float: left;
 }
 
-/*contact.html class*/
-.line2{
-border:2px solid #dddddd;
+#logo {
+width:100%;
+padding: 0px;
 }
 
-/*contact.html class Submit button*/
-.button {
-  background:#4aaaa5;
-  color:#ffffff;
-  border:1px solid #cccccc;
-  font-size:20px;
-  padding:1px;
-  width:22%;
-  text-align: center;
+nav {
+  width:96%;
+  margin:2%;
+  padding: 2%;
 }
 
-/*contact.html class*/
-.box{
- border:2px solid #dddddd; 
- padding: 80px;
- margin-bottom: 10px;
+#main-container {
+  padding-top: 190px;
 }
-
-/*Portfolio.html classes*/
-.label_p{
-  background:#4aaaa5;
-  color:#ffffff;
-  font-size:20px;
-  padding:5px;
-  width:100%;
-  text-align: center;
 
 }
 
-.portfolio1{
-  padding:1px;
-  width:270px;
-  height:150px;
-  margin:10px;
-  background-image: url("../images/p1.jpg");
-  background-repeat: no-repeat;
-  float: left;
-  position: relative;
+@media screen and (max-width: 980px) {
 
-}
-.portfolio2{
-  padding:1px;
-  width: 270px;
-  height:150px;
-  margin: 10px;
-  background-image: url("../images/p2.jpg");
-  background-repeat: no-repeat;
-  float: left;
-
-
+#main-container { 
+ max-width:94%;
+ margin:3%;
+ padding:3%;
 }
 
-.portfolio3{
-  padding:1px;
-  width:270px;
-  height:150px;
-  margin: 10px;
-  background-image: url("../images/p3.jpg");
-  background-repeat: no-repeat;
-  float: left;
-  position: relative;
+
+#masthead{
+max-width:100%;
+padding-left: 20px;
+padding-right: 20px;
 
 }
-
-.portfolio4{
-  padding:1px;
-  width:270px;
-  height:150px;
-  margin: 10px;
-  background-image: url("../images/p4.jpg");
-  background-repeat: no-repeat;
-  float: left;
-  position: relative;
-
 }
 
-.portfolio5{
-  padding:1px;
-  width:270px;
-  height:128px;
-  margin: 10px;
-  background-image: url("../images/p5.jpg");
-  background-repeat: no-repeat;
-  float: left;
-  position: relative;
 
-}
+
+
+
 
 
